Fix Table Overflow

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,3 +11,11 @@
 .row div{
     margin-bottom: 5px;
 }
+
+th{
+    overflow-wrap: anywhere;
+}
+
+td {
+    overflow-wrap: anywhere
+}
